# NeuralNetwork

./: CMakeCache.txt  CMakeLists.txt  Gen.cpp  Makefile  NN.cpp  NN.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Visualising.cpp  XorButWithMat.cpp  XorButWithMatGood.cpp  build.sh  cmake_install.cmake  convertTrain.cpp  csvToMat.cpp  fullAdder.cpp  gates.cpp  generateMat.cpp  generateMatMany.cpp  imgRec.cpp  imgRecog.cpp  imgToMat.cpp  imgToMatColor.cpp  imgToMatMany.cpp  imgToMatN.cpp  imgToMatUniversal.cpp  musicToPicture.cpp  numbers.cpp  picSacasticDescent.cpp  picSacasticDescentCSV.cpp  picSacasticDescentColor.cpp  picSacasticDescentMinst.cpp  picSacasticDescentSongs.cpp  picSacasticDescentTry.cpp  pictures.cpp  spectograma.arch  spectograma.mat  start.sh  test.cpp  test.csv  (+5 more)
PythonNN/: check.py  checkForAll.py  good.h5  irisBad.py  main.py  model_history.pkl  musicToCSV.py  myfeatures_3_sec.csv
XorGood/: xor.cpp
arches/: both.arch  img.arch  imgColor.arch  manyShape.arch  prostie.arch  shapes.arch  song.arch
mats/: 4.mat  5.mat  all.mat  allNr.mat  allNumbers.mat  allNumbersPng.mat  both.mat  both2.mat  circle.mat  flower.mat  fourNums.mat  greenCircle.mat  one.mat  save.mat  see4.mat  see5.mat  seven.mat  shapes.mat  shapesBig.mat  square.mat  testColor.mat  testMa.mat  threeNums.mat  threeNums.mat.mat  twoColors.mat  twoNumbs.mat  twoSongs.mat  twoSongsMic.mat
src/: Gen  MatTest  Visualising  XorButWithMat  XorButWithMatGood  convertTrain  error  fullAdder  gates  generateMat  generateMatMany  imgRec  imgRecog  imgToMat  imgToMatColor  imgToMatMany  imgToMatN  (+16 more)
(+56 files in other folders)
